--- a/www/ips.html
+++ b/www/ips.html
@@ -137,8 +137,8 @@
         <!-- /JS -->
 		
 		<!--  demo code -->
+        <script src="/socket.io/socket.io.js"></script>
 		<script src="ips.js"></script>
-
         <script src="ips-list.js"></script>
         
     </body>
