除了结果图表，基本完成，准备与ns3交互。

--- a/www/ips.html
+++ b/www/ips.html
@@ -20,20 +20,18 @@
                 </div> -->
             </div>
             <div class="left">
-                <h5 id="pname" class="headline">Project</h5>
-                <select id="plist" name="cars">
-                    <option value="volvo">Volvo</option>
-                    <option value="saab">Saab</option>
-                    <option value="fiat" selected="selected">Fiat</option>
-                    <option value="audi">Audi</option>
-                </select>
+                <!-- <h5 id="pname" class="headline">Project</h5> -->
+                <input type="hidden" id="pid" value="123">
+                <input type="text" id="pname" class="headline" value="New"><br>
+                <select id="plist"></select>
                 <a href="javascript:void(0);" class="ips_btn" id="btn_open">Open</a>
-                <a href="javascript:void(0);" class="ips_btn" id="btn_refresh">Refresh</a>
-                <br>
+                
+                <!-- <br> -->
                 <a href="javascript:void(0);" class="ips_btn" id="btn_new">New</a>
                 <a href="javascript:void(0);" class="ips_btn" id="btn_save">Save</a>
-                <a href="javascript:void(0);" class="ips_btn" id="btn_saveas">Save As</a>
+                <!-- <a href="javascript:void(0);" class="ips_btn" id="btn_saveas">Save As</a> -->
                 <a href="javascript:void(0);" class="ips_btn" id="btn_delete">Delete</a>
+                <a href="javascript:void(0);" class="ips_btn" id="btn_refresh">Refresh</a>
                 <hr>
                 <a href="javascript:void(0);" class="ips_img" id="btn_add_switch">
                     <img src="http://v4.vcimg.com/base/images/index/duola.png?v=bedbf22e" alt="switch">
