试了两个chart插件，chartjs和flot，用了flot。

--- a/www/ips.html
+++ b/www/ips.html
@@ -92,6 +92,17 @@
             </div>
 			<!-- /demo -->
         </div>
+
+        <div class="modal" id="modal">
+            <div class="drawdiv">
+                
+                <div id="placeholder"></div>
+                <!-- <canvas id="canvas"></canvas> -->
+                <a href="javascript:void(0);" class="ips_btn" id="btn_return">Return</a>
+            </div>
+
+        </div>
+        </div>
 	
         <!-- JS -->
         <!-- support lib for bezier stuff -->
@@ -135,9 +146,11 @@
         <!-- /JS -->
 		
 		<!--  demo code -->
+        <script src="jquery.js"></script>
+        <script src="jquery.flot.js"></script>
+        <script src="Chart.min.js"></script>
         <script src="/socket.io/socket.io.js"></script>
 		<script src="ips.js"></script>
-        <script src="ips-list.js"></script>
         
     </body>
 </html>
