--- a/www/ips.html
+++ b/www/ips.html
@@ -33,23 +33,23 @@
                 <a href="javascript:void(0);" class="ips_btn" id="btn_delete">Delete</a>
                 <a href="javascript:void(0);" class="ips_btn" id="btn_refresh">Refresh</a>
                 <hr>
-                <a href="javascript:void(0);" class="ips_img" id="btn_add_switch">
-                    <img src="http://v4.vcimg.com/base/images/index/duola.png?v=bedbf22e" alt="switch">
+                <a href="javascript:void(0);" class="ips_img" id="btn_add_switch" title="switch">
+                    <img style="width:45px;padding:10px;" src="img/Switch.png">
                 </a>
-                <a href="javascript:void(0);" class="ips_img" id="btn_add_mu">
-                    <img src="http://v4.vcimg.com/base/images/index/duola.png?v=bedbf22e" alt="switch">
+                <a href="javascript:void(0);" class="ips_img" id="btn_add_mu" title="mu">
+                    <img style="width:45px;padding:10px;" src="img/MU.png">
                 </a>
-                <a href="javascript:void(0);" class="ips_img" id="btn_add_it">
-                    <img src="http://v4.vcimg.com/base/images/index/duola.png?v=bedbf22e" alt="switch">
+                <a href="javascript:void(0);" class="ips_img" id="btn_add_it" title="it">
+                    <img style="width:45px;padding:10px;" src="img/IT.png">
                 </a>
-                <a href="javascript:void(0);" class="ips_img" id="btn_add_pc">
-                    <img src="http://v4.vcimg.com/base/images/index/duola.png?v=bedbf22e" alt="switch">
+                <a href="javascript:void(0);" class="ips_img" id="btn_add_pc" title="pc">
+                    <img style="width:45px;padding:10px;" src="img/PC.png">
                 </a>
-                <a href="javascript:void(0);" class="ips_img" id="btn_add_fc">
-                    <img src="http://v4.vcimg.com/base/images/index/duola.png?v=bedbf22e" alt="switch">
+                <a href="javascript:void(0);" class="ips_img" id="btn_add_fc" title="fc">
+                    <img style="width:45px;padding:10px;" src="img/FC.png">
                 </a>
-                <a href="javascript:void(0);" class="ips_img" id="btn_add_mn">
-                    <img src="http://v4.vcimg.com/base/images/index/duola.png?v=bedbf22e" alt="switch">
+                <a href="javascript:void(0);" class="ips_img" id="btn_add_mn" title="mn">
+                    <img style="width:45px;padding:10px;" src="img/MN.png">
                 </a>
                 <!-- <hr> -->
                 <!-- <a href="javascript:void(0);" class="ips_btn" id="btn_zoomin">Zoom</a> -->
