--- a/www/index.html
+++ b/www/index.html
@@ -83,39 +83,39 @@
                         </div>   
                     <div id="toolbox" class="Toolbox"> 
                         <div class="toolbox-item" style="dispaly:inline-block;width:60px " >
-                            <img class="img-responsive img-thumbnail" alt="Responsive image" src="./network/images2/mu.png" draggable="true" title="MU" draginfo='{"size":{"width":40},"image":"./network/images2/mu.png","label":"MU"}' ondragstart="drag(event)" >
+                            <img class="img-responsive img-thumbnail" alt="Responsive image" src="./network/images2/mu.png" draggable="true" title="合并单元" draginfo='{"size":{"width":40},"image":"./network/images2/mu.png","label":"MU"}' ondragstart="drag(event)" >
                             <div class="caption">
-                                MU
+                                合并单元
                             </div>
                         </div>
                         <div class="toolbox-item" style="dispaly:inline-block;width:60px " >
-                            <img class="img-responsive img-thumbnail" alt="Responsive image" src="./network/images2/mn.png" draggable="true" title="MN" draginfo='{"size":{"width":40},"image":"./network/images2/mn.png","label":"MN"}' ondragstart="drag(event)">
+                            <img class="img-responsive img-thumbnail" alt="Responsive image" src="./network/images2/mn.png" draggable="true" title="采集装置" draginfo='{"size":{"width":40},"image":"./network/images2/mn.png","label":"MN"}' ondragstart="drag(event)">
                             <div class="caption">
-                                MN
+                                采集装置
                             </div>
                         </div>
                         <div class="toolbox-item" style="dispaly:inline-block;width:60px " >
-                             <img class="img-responsive img-thumbnail" alt="Responsive image" src="./network/images2/it.png" draggable="true" title="IT" draginfo='{"size":{"width":40},"image":"./network/images2/it.png","label":"IT"}' ondragstart="drag(event)">
+                             <img class="img-responsive img-thumbnail" alt="Responsive image" src="./network/images2/it.png" draggable="true" title="智能终端" draginfo='{"size":{"width":40},"image":"./network/images2/it.png","label":"IT"}' ondragstart="drag(event)">
                             <div class="caption">
-                                IT
+                                智能终端
                             </div>
                         </div>
                         <div class="toolbox-item" style="dispaly:inline-block;width:60px " >
-                            <img class="img-responsive img-thumbnail" alt="Responsive image" src="./network/images2/fc.png" draggable="true" title="FC" draginfo='{"size":{"width":40},"image":"./network/images2/fc.png","label":"FC"}' ondragstart="drag(event)">
+                            <img class="img-responsive img-thumbnail" alt="Responsive image" src="./network/images2/fc.png" draggable="true" title="多功能测控" draginfo='{"size":{"width":40},"image":"./network/images2/fc.png","label":"FC"}' ondragstart="drag(event)">
                             <div class="caption">
-                                FC
+                                多功能测控
                             </div>
                         </div>
                         <div class="toolbox-item" style="dispaly:inline-block;width:60px " >
-                             <img class="img-responsive img-thumbnail" alt="Responsive image" src="./network/images2/switch.png" draggable="true" title="Switch" draginfo='{"size":{"width":40},"image":"./network/images2/switch.png","label":"Switch"}' ondragstart="drag(event)">
+                             <img class="img-responsive img-thumbnail" alt="Responsive image" src="./network/images2/switch.png" draggable="true" title="交换机" draginfo='{"size":{"width":40},"image":"./network/images2/switch.png","label":"Switch"}' ondragstart="drag(event)">
                             <div class="caption">
-                                SWITCH
+                                交换机
                             </div>
                         </div>
                         <div class="toolbox-item" style="dispaly:inline-block;width:60px " >
-                               <img class="img-responsive img-thumbnail" alt="Responsive image" src="./network/images2/pc.png" draggable="true" title="PC" draginfo='{"size":{"width":40},"image":"./network/images2/pc.png","label":"PC"}' ondragstart="drag(event)">
+                               <img class="img-responsive img-thumbnail" alt="Responsive image" src="./network/images2/pc.png" draggable="true" title="保护测控" draginfo='{"size":{"width":40},"image":"./network/images2/pc.png","label":"PC"}' ondragstart="drag(event)">
                             <div class="caption">
-                                PC
+                                保护测控
                             </div>
                         </div>
                    <!--      <img class="img-responsive img-thumbnail" alt="Responsive image" src="./img/host.png" draggable="true" title="服务器" draginfo='{"size":{"width":40},"image":"./img/modem.png","label":"服务器"}' ondragstart="drag(event)">
