--- a/www/index.html
+++ b/www/index.html
@@ -83,37 +83,37 @@
                         </div>   
                     <div id="toolbox" class="Toolbox"> 
                         <div class="toolbox-item" style="dispaly:inline-block;width:60px " >
-                            <img class="img-responsive img-thumbnail" alt="Responsive image" src="./network/images2/mu.png" draggable="true" title="合并单元" draginfo='{"size":{"width":40},"image":"./network/images2/mu.png","label":"MU"}' ondragstart="drag(event)" >
+                            <img class="img-responsive img-thumbnail" alt="Responsive image" src="./network/images2/mu.png" draggable="true" title="合并单元" draginfo='{"title="合并单元",size":{"width":40},"image":"./network/images2/mu.png","label":"MU"}' ondragstart="drag(event)" >
                             <div class="caption">
                                 合并单元
                             </div>
                         </div>
                         <div class="toolbox-item" style="dispaly:inline-block;width:60px " >
-                            <img class="img-responsive img-thumbnail" alt="Responsive image" src="./network/images2/mn.png" draggable="true" title="采集装置" draginfo='{"size":{"width":40},"image":"./network/images2/mn.png","label":"MN"}' ondragstart="drag(event)">
+                            <img class="img-responsive img-thumbnail" alt="Responsive image" src="./network/images2/mn.png" draggable="true" title="采集装置" draginfo='{"title="采集装置",size":{"width":40},"image":"./network/images2/mn.png","label":"MN"}' ondragstart="drag(event)">
                             <div class="caption">
                                 采集装置
                             </div>
                         </div>
                         <div class="toolbox-item" style="dispaly:inline-block;width:60px " >
-                             <img class="img-responsive img-thumbnail" alt="Responsive image" src="./network/images2/it.png" draggable="true" title="智能终端" draginfo='{"size":{"width":40},"image":"./network/images2/it.png","label":"IT"}' ondragstart="drag(event)">
+                             <img class="img-responsive img-thumbnail" alt="Responsive image" src="./network/images2/it.png" draggable="true" title="智能终端" draginfo='{"title="智能终端",size":{"width":40},"image":"./network/images2/it.png","label":"IT"}' ondragstart="drag(event)">
                             <div class="caption">
                                 智能终端
                             </div>
                         </div>
                         <div class="toolbox-item" style="dispaly:inline-block;width:60px " >
-                            <img class="img-responsive img-thumbnail" alt="Responsive image" src="./network/images2/fc.png" draggable="true" title="多功能测控" draginfo='{"size":{"width":40},"image":"./network/images2/fc.png","label":"FC"}' ondragstart="drag(event)">
+                            <img class="img-responsive img-thumbnail" alt="Responsive image" src="./network/images2/fc.png" draggable="true" title="多功能测控" draginfo='{"title="多功能测控",size":{"width":40},"image":"./network/images2/fc.png","label":"FC"}' ondragstart="drag(event)">
                             <div class="caption">
                                 多功能测控
                             </div>
                         </div>
                         <div class="toolbox-item" style="dispaly:inline-block;width:60px " >
-                             <img class="img-responsive img-thumbnail" alt="Responsive image" src="./network/images2/switch.png" draggable="true" title="交换机" draginfo='{"size":{"width":40},"image":"./network/images2/switch.png","label":"Switch"}' ondragstart="drag(event)">
+                             <img class="img-responsive img-thumbnail" alt="Responsive image" src="./network/images2/switch.png" draggable="true" title="交换机" draginfo='{"title="交换机",size":{"width":40},"image":"./network/images2/switch.png","label":"Switch"}' ondragstart="drag(event)">
                             <div class="caption">
                                 交换机
                             </div>
                         </div>
                         <div class="toolbox-item" style="dispaly:inline-block;width:60px " >
-                               <img class="img-responsive img-thumbnail" alt="Responsive image" src="./network/images2/pc.png" draggable="true" title="保护测控" draginfo='{"size":{"width":40},"image":"./network/images2/pc.png","label":"PC"}' ondragstart="drag(event)">
+                               <img class="img-responsive img-thumbnail" alt="Responsive image" src="./network/images2/pc.png" draggable="true" title="保护测控" draginfo='{"title="保护测控",size":{"width":40},"image":"./network/images2/pc.png","label":"PC"}' ondragstart="drag(event)">
                             <div class="caption">
                                 保护测控
                             </div>
